test/should-fail/vsgc2355.f3
/*
 * @test/compile-error
 */
java.awt.Color.getRGBComponents(null);
